--- a/templates/register.html
+++ b/templates/register.html
@@ -2,10 +2,10 @@
 {% block title %}Register{% endblock %}
 
 {% block content %}
-<div class="row justify-content-center">
+<div class="row justify-content-center fade-soft">
   <div class="col-md-6">
-    <h2 class="mb-3">Create account</h2>
-    <div class="card">
+    <h2 class="mb-3 section-title">Create account</h2>
+    <div class="card form-shell">
       <div class="card-body">
         <form method="POST">
           <div class="mb-3">
@@ -31,3 +31,4 @@
   </div>
 </div>
 {% endblock %}
+
