--- a/templates/login.html
+++ b/templates/login.html
@@ -2,10 +2,10 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<div class="row justify-content-center">
+<div class="row justify-content-center fade-soft">
   <div class="col-md-6">
-    <h2 class="mb-3">Login</h2>
-    <div class="card">
+    <h2 class="mb-3 section-title">Login</h2>
+    <div class="card form-shell">
       <div class="card-body">
         <form method="POST">
           <div class="mb-3">
@@ -23,4 +23,5 @@
   </div>
 </div>
 {% endblock %}
+
 
